--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ header h1 {
 }
 
 
-#version-control-system {/*coming soon*/
+#version-control-system {/*project-1*/
     background-image: url("");
     background-position: cover;
     background-size: cover;
